# ltspice_pcb_viewer

./: .gitignore  ARCHITECTURE.md  PARASITICS_CONTEXT.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-app.yml
demo/: index.html
modules/analytic_models/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
modules/analytic_models/src/: constants.ts  dc.ts  index.ts  losses.ts  microstrip.ts  stripline.ts
modules/app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.viewer.config.ts
modules/geometry_core/: Cargo.toml  README.md
modules/geometry_core/pkg/: README.md  geometry_core.d.ts  geometry_core.js  geometry_core_bg.wasm  geometry_core_bg.wasm.d.ts  package.json
modules/geometry_core/src/: lib.rs
modules/kicad_pcb_viewer/: CONTEXT.md  README.md  package-lock.json  package.json  vite.config.ts  vite.default-board.ts  vite.demo.config.ts
modules/kicad_schematic_viewer/: package.json  tsconfig.json  vite.config.ts
modules/ltspice_kicad_mapper/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
modules/ltspice_schematic_viewer/: README.md  package-lock.json  package.json  vite.config.ts
modules/pcb_mesh/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
modules/solver_rdc/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: diagnose-transform.ts
src/netlist/: connectivity.ts
src/parser/: schematic.ts
src/render/: svg.ts  theme.ts
(+123 files in other folders)
